welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: illegal start of statement
      die2:Double;=1
                  ^